--- a/about.html
+++ b/about.html
@@ -45,8 +45,37 @@
             </div>
         </div>
     </nav>
-    <p>Welcome to about page</p>
 
+
+
+
+
+    <div class="container mt-4">
+ 
+
+
+        <!-- Team Members Information -->
+        <h2 class="text-center"> The Creators</h2>
+        <div class="row mt-4">
+
+            <h3 class="text-center">SE/ComS319 Construction of User Interfaces, Fall 2024</h3>
+            <p class="text-center">Date: October 20, 2024</p>
+            <!-- Student 1 -->
+            <div class="col-md-5 text-left mb-4">
+                <h3>Anoop Boyal</h3>
+                <p>anoop04@iastate.edu</p>
+                <img src="./images/profilepic.jpeg" alt="Anoop pfp" class="rounded-circle"  width="300" height="250">
+            </div>
+
+            
+            <!-- Student 2 -->
+            <div class="col-md-5 offset-md-2 text-right mb-4">
+                <h3>Vance Arnold</h3>
+                <p>varnold@iastate.edu</p>
+                <img src="" alt="vance pfp" class="rounded-circle"  width="300" height="250">
+
+            </div>
+    
 </body>
 
 </html>
