Added about for Vance

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
         <h2 class="text-center"> The Creators</h2>
         <div class="row mt-4">
 
-            <h3 class="glow" >ComS319 Construction of User Interfaces, Fall 2024</h3>
+            <h3 class="glow">ComS319 Construction of User Interfaces, Fall 2024</h3>
             <p class="text-center">Date: October 20, 2024</p>
             <!-- Student 1 -->
             <div class="col-md-5 text-left mb-4">
@@ -67,12 +67,10 @@
                 <img src="./images/profilepic.jpeg" alt="Anoop pfp" class="rounded-circle" width="300" height="250">
 
                 <p>
-                    Anoop Boyal also known as Money, is an elite businessman from a young age. Founding a shoe resale
-                    business Money has made thousands. Money also works at wingstop, by working hard he is now a
-                    shift-leader. However Money strives to become an elite software developer after college. He
+                    Anoop Boyal, also known as Money, is an elite businessman from a young age. Founding a shoe resale
+                    business, Money has made thousands. Money also works at Wingstop; by working hard he is now a
+                    shift-leader. However, Money strives to become an elite software developer after college. He
                     continues to sharpen his skills and build new ones by creating projects and working hard.
-
-                    <!-- add desc -->
                 </p>
             </div>
 
@@ -81,13 +79,12 @@
             <div class="col-md-5 offset-md-2 text-right mb-4">
                 <h3 style="color: #056706">Vance Arnold</h3>
                 <p>varnold@iastate.edu</p>
-                <img src="" alt="vance pfp" class="rounded-circle" width="300" height="250">
+                <img src="./images/vancepfp2.jpg" alt="vance pfp" class="rounded-circle" width="175" height="250">
                 <p>
-                    <!-- add desc -->
-                    Vance Arnold is an elite coder amongst his peers with many projects, an internship, and 4.0 gpa,
-                    Vance is the top dog. Vance works hard to be the best with a succesful startup and many projects he
-                    is always improving. Vance will be interning at Colins Aerospace this summer and will continue to
-                    work hard.
+                    Vance "Verbose" Arnold is an elite coder amongst his peers; with many projects, an internship,
+                    and a near perfect GPA, Vance is the top dog. Vance works extremely hard to be the best with a
+                    successful startup and many projects he is always improving. Vance will be continuing his
+                    internship at Collins Aerospace this summer and will continue to hone his skills.
                 </p>
             </div>
 
